@@ -391,7 +391,7 @@ extern unsigned MaxClusterId;
 
 void Address2Info_Write_Labels (FILE *);
 int Labels_GeneratePCFfile (char *name, long long options);
-void Labels_loadSYMfile (int taskid, char *name);
+void Labels_loadSYMfile (int taskid, char *name, int report);
 int Labels_LookForHWCCounter (int eventcode, unsigned *position, char **description);
 
 #endif
