@@ -1169,12 +1169,21 @@ int remove_temporal_files(void)
 	for (thread = 0; thread < get_maximum_NumOfThreads(); thread++)
 	{
 		FileName_PTT(tmpname, Get_TemporalDir(initialTASKID), appl_name, getpid(), initialTASKID, thread, EXT_TMP_MPIT);
-		if (unlink(tmpname) == -1)
-			fprintf (stderr, PACKAGE_NAME": Error removing a temporal tracing file\n");
+		if (file_exists(tmpname))
+			if (unlink(tmpname) == -1)
+				fprintf (stderr, PACKAGE_NAME": Error removing a temporal tracing file (%s)\n", tmpname);
 
+#if defined(SAMPLING_SUPPORT)
 		FileName_PTT(tmpname, Get_TemporalDir(initialTASKID), appl_name, getpid(), initialTASKID, thread, EXT_TMP_SAMPLE);
-		if (unlink(tmpname) == -1)
-			fprintf (stderr, PACKAGE_NAME": Error removing a temporal sampling file\n");
+		if (file_exists(tmpname))
+			if (unlink(tmpname) == -1)
+				fprintf (stderr, PACKAGE_NAME": Error removing a temporal sampling file (%s)\n", tmpname);
+#endif
+
+		FileName_PTT(tmpname, Get_TemporalDir(initialTASKID), appl_name, getpid(), initialTASKID, thread, EXT_SYM);
+		if (file_exists (tmpname))
+			if (unlink(tmpname) == -1)
+				fprintf (stderr, PACKAGE_NAME": Error removing symbol file (%s)\n", tmpname);
 	}
 	return 0;
 }
@@ -1536,7 +1545,7 @@ int Backend_preInitialize (int me, int world_size, char *config_file)
 	copy_program_name ();
 
 	/* Remove the .sym file if the file has not been generated by DynInst */
-	if (!runningInDynInst)
+	if (me == 0 && !runningInDynInst)
 	{
 		FileName_P(trace_sym, final_dir, appl_name, EXT_SYM);
 		unlink (trace_sym);
@@ -1566,7 +1575,7 @@ int Backend_preInitialize (int me, int world_size, char *config_file)
 			unsigned u = 0;
 			while (u < count)
 			{
-				Extrae_AddTypeValuesEntryToSYM ('H', hwc_defs[u].event_code,
+				Extrae_AddTypeValuesEntryToGlobalSYM ('H', hwc_defs[u].event_code,
 					hwc_defs[u].description, (char)0, 0, NULL, NULL);
 				u++;
 			}
@@ -1855,12 +1864,22 @@ static void Backend_Finalize_close_mpits (int thread)
 
 	Buffer_Close(TRACING_BUFFER(thread));
 
+	/* Rename MPIT file */
 	FileName_PTT(tmp_name, Get_TemporalDir(initialTASKID), appl_name, getpid(), initialTASKID, thread, EXT_TMP_MPIT);
   FileName_PTT(trace, Get_FinalDir(TASKID), appl_name, getpid(), TASKID, thread, EXT_MPIT);
-
 	rename_or_copy (tmp_name, trace); 
 	fprintf (stdout, PACKAGE_NAME": Intermediate raw trace file created : %s\n", trace);
 
+	/* Rename SYM file, if it exists */
+	FileName_PTT(tmp_name, Get_TemporalDir(initialTASKID), appl_name, getpid(), initialTASKID, thread, EXT_SYM);
+	if (file_exists (tmp_name))
+	{
+		FileName_PTT(trace, Get_FinalDir(TASKID), appl_name, getpid(), TASKID, thread, EXT_SYM);
+		rename_or_copy (tmp_name, trace); 
+		fprintf (stdout, PACKAGE_NAME": Symbol file created : %s\n", trace);
+	}
+
+	/* Rename SAMPLE file, if it exists */
 #if defined(SAMPLING_SUPPORT)
 	FileName_PTT(tmp_name, Get_TemporalDir(initialTASKID), appl_name, getpid(), initialTASKID, thread, EXT_TMP_SAMPLE);
 	if (Buffer_GetFillCount(SAMPLING_BUFFER(thread)) > 0) 
@@ -1869,7 +1888,6 @@ static void Backend_Finalize_close_mpits (int thread)
 		Buffer_Close(SAMPLING_BUFFER(thread));
 
 		FileName_PTT(trace, Get_FinalDir(TASKID), appl_name, getpid(), TASKID, thread, EXT_SAMPLE);
-
 		rename_or_copy (tmp_name, trace);
 		fprintf (stdout, PACKAGE_NAME": Intermediate raw sample file created : %s\n", trace);
 	}
@@ -2060,7 +2078,7 @@ void Backend_Leave_Instrumentation (void)
 		Trace_Mode_Change(thread, LAST_READ_TIME);
 }
 
-void Extrae_AddTypeValuesEntryToSYM (char code_type, int type, char *description,
+void Extrae_AddTypeValuesEntryToGlobalSYM (char code_type, int type, char *description,
 	char code_values, unsigned nvalues, unsigned long long *values,
 	char **description_values)
 {
@@ -2092,7 +2110,41 @@ void Extrae_AddTypeValuesEntryToSYM (char code_type, int type, char *description
 	}
 }
 
-void Extrae_AddFunctionDefinitionEntryToSYM (char code_type, void *address,
+void Extrae_AddTypeValuesEntryToLocalSYM (char code_type, int type, char *description,
+	char code_values, unsigned nvalues, unsigned long long *values,
+	char **description_values)
+{
+	char line[1024];
+	char trace_sym[TMP_DIR];
+	int fd;
+
+	ASSERT(strlen(description)<1024, "Description for type is too large");
+
+	//FileName_P(trace_sym, final_dir, appl_name, EXT_SYM);
+	FileName_PTT(trace_sym, Get_TemporalDir(Extrae_get_initial_TASKID()),
+		appl_name, getpid(), Extrae_get_initial_TASKID(), THREADID, EXT_SYM);
+	if ((fd = open(trace_sym, O_WRONLY | O_APPEND | O_CREAT, 0644)) >= 0)
+	{
+		snprintf (line, sizeof(line), "%c %d \"%s\"\n", code_type, type,
+			description);
+		write (fd, line, strlen(line));
+		if (nvalues > 0)
+		{
+			unsigned i;
+			for (i = 0; i < nvalues; i++)
+			{
+				ASSERT(strlen(description_values[i])<1024, "Description for value is too large");
+
+				snprintf (line, sizeof(line), "%c %llu \"%s\"\n", code_values,
+					values[i], description_values[i]);
+				write (fd, line, strlen(line));
+			}
+		}
+		close (fd);
+	}
+}
+
+void Extrae_AddFunctionDefinitionEntryToLocalSYM (char code_type, void *address,
 	char *functionname, char *modulename, unsigned fileline)
 {
 	char line[1024];
@@ -2101,7 +2153,9 @@ void Extrae_AddFunctionDefinitionEntryToSYM (char code_type, void *address,
 
 	ASSERT(strlen(functionname)+strlen(modulename)<1024, "Function name and module name are too large!");
 
-	FileName_P(trace_sym, final_dir, appl_name, EXT_SYM);
+	//FileName_P(trace_sym, final_dir, appl_name, EXT_SYM);
+	FileName_PTT(trace_sym, Get_TemporalDir(Extrae_get_initial_TASKID()),
+		appl_name, getpid(), Extrae_get_initial_TASKID(), THREADID, EXT_SYM);
 	if ((fd = open(trace_sym, O_WRONLY | O_APPEND | O_CREAT, 0644)) >= 0)
 	{
 		/* Example of format: U 0x100016d4 fA mpi_test.c 0 */
